@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-18T01:24:06Z",
+  "timestamp" : "2022-07-18T08:20:22Z",
   "count_outdated" : 397,
   "uniques_outdated" : 229,
-  "count" : 426,
+  "count" : 425,
   "uniques" : 245,
   "clones" : [
     {
       "timestamp": "2022-07-04T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
