@@ -1,3 +1,10 @@
+2022-07-18T08:20:22Z:
+* notice: last 14d: unq all: 4 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 229 397 / 245 426
+* notice: next accum: outdated-unq outdated-all / unq all: 229 397 / 245 425
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-07-04]
+
 2022-07-18T01:24:06Z:
 * notice: last 14d: unq all: 4 29
 * notice: prev accum: outdated-unq outdated-all / unq all: 228 395 / 245 425
